Documentation edits made through Mintlify web editor

--- a/app-builder/builder/components/categories.mdx
+++ b/app-builder/builder/components/categories.mdx
@@ -18,7 +18,13 @@ icon: "grid-2"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image31_42508fd40a.png"
         alt="Nút thêm dữ liệu danh mục trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút thêm dữ liệu danh mục"
       />
     </Frame>
@@ -33,7 +39,13 @@ icon: "grid-2"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image171_5ce7eaa661.png"
         alt="Giao diện thêm dữ liệu và chọn ảnh danh mục"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Thêm dữ liệu danh mục"
       />
     </Frame>
@@ -56,7 +68,13 @@ icon: "grid-2"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image91_08c92427f7.png"
         alt="Nút chỉnh sửa danh mục trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút chỉnh sửa danh mục"
       />
     </Frame>
@@ -73,7 +91,13 @@ icon: "grid-2"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image151_51c1f8b621.png"
         alt="Giao diện chỉnh sửa danh mục và chọn ảnh"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Trang chỉnh sửa dữ liệu danh mục"
       />
     </Frame>
@@ -94,7 +118,13 @@ icon: "grid-2"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image225_b877ada35f.png"
         alt="Nút xóa thẻ trong danh mục"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút xóa dữ liệu"
       />
     </Frame>
@@ -114,7 +144,13 @@ icon: "grid-2"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image126_386385d018.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -126,7 +162,13 @@ icon: "grid-2"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image378_f6c5e6cc9c.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -143,7 +185,13 @@ icon: "grid-2"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image379_0042a11cc9.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -154,7 +202,13 @@ icon: "grid-2"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image380_e2caea547b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -165,7 +219,13 @@ icon: "grid-2"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image381_639af9db0a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -177,7 +237,13 @@ icon: "grid-2"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image382_d8f27a88d5.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -188,7 +254,13 @@ icon: "grid-2"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image383_e5c90145cf.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -199,7 +271,13 @@ icon: "grid-2"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image384_a379874324.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -211,7 +289,13 @@ icon: "grid-2"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image385_13dec63853.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -225,7 +309,13 @@ icon: "grid-2"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image386_16702fe937.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -236,7 +326,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image387_f76c43cf4c.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -248,7 +344,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image388_ee4b25ac1f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -259,7 +361,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image389_c8a21a355b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -273,7 +381,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image390_b4c32f9d6a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -284,7 +398,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image391_16a20d3bc6.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -298,7 +418,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image72_ad00d88a1b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -311,7 +437,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image392_b21262da41.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -323,7 +455,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image393_bfdb5fad0f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -334,7 +472,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image394_ac28dd8611.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -346,7 +490,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image395_932a549d78.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -357,7 +507,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image396_13fcc149b2.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -371,7 +527,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image397_4d66642fed.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -382,7 +544,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image398_37c760a305.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
