--- a/app-builder/builder/components/cta.mdx
+++ b/app-builder/builder/components/cta.mdx
@@ -15,7 +15,13 @@ icon: "megaphone"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image29_d286178c1d.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -26,7 +32,13 @@ icon: "megaphone"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image433_12e2bfd0ff.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -42,7 +54,13 @@ icon: "megaphone"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image434_b5f7f22a67.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -56,7 +74,13 @@ icon: "megaphone"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image435_777d9af5df.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -67,7 +91,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image436_3a48593d9d.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -79,7 +109,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image437_a2a3a2680b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -90,7 +126,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image438_9b2faa5aab.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -104,7 +146,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image439_abf274f4d4.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -115,7 +163,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image440_76a47d9691.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
