--- a/app-builder/builder/components/news.mdx
+++ b/app-builder/builder/components/news.mdx
@@ -18,7 +18,13 @@ icon: "newspaper"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image169_a8189018fa.png"
         alt="Nút thêm dữ liệu mới cho tin tức trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút thêm dữ liệu mới"
       />
     </Frame>
@@ -30,7 +36,13 @@ icon: "newspaper"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image93_d0e1b33f58.png"
         alt="Giao diện thêm tin tức mới và chọn ảnh minh họa"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Màn hình thêm dữ liệu tin tức"
       />
     </Frame>
@@ -50,7 +62,13 @@ icon: "newspaper"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image65_3b249e0f79.png"
         alt="Nút chỉnh sửa tin tức trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút chỉnh sửa tin tức"
       />
     </Frame>
@@ -62,7 +80,13 @@ icon: "newspaper"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image195_d958fb2143.png"
         alt="Giao diện chỉnh sửa tin tức và thay đổi hình ảnh minh họa"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Màn hình chỉnh sửa tin tức"
       />
     </Frame>
@@ -82,7 +106,13 @@ icon: "newspaper"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image163_d9ff8be9bc.png"
         alt="Nút xóa tin tức trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút xóa dữ liệu tin tức"
       />
     </Frame>
@@ -102,7 +132,13 @@ icon: "newspaper"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image15_edc786c82c.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -114,7 +150,13 @@ icon: "newspaper"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image443_82dcf53949.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -126,7 +168,13 @@ icon: "newspaper"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image444_021ace5b4d.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -137,7 +185,13 @@ icon: "newspaper"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image445_0b1a3ebda6.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -148,7 +202,13 @@ icon: "newspaper"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image446_a30963897f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -160,7 +220,13 @@ icon: "newspaper"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image447_066b2e1ea1.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -171,7 +237,13 @@ icon: "newspaper"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image448_bdce31ca2f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -182,7 +254,13 @@ icon: "newspaper"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image449_1fcc3d41ce.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -192,7 +270,13 @@ icon: "newspaper"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image450_d42d44b2b5.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -203,7 +287,13 @@ icon: "newspaper"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image451_d78e86dc01.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -217,7 +307,13 @@ icon: "newspaper"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image452_2410114bc7.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -228,7 +324,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image453_178f9a27ee.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -240,7 +342,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image454_39e29c2aa1.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -251,7 +359,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image455_6e90a7a18a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -265,7 +379,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image456_e8b8e71e0f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -276,7 +396,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image457_4607d954b7.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -290,7 +416,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image72_ad00d88a1b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
