--- a/app-builder/builder/components/products.mdx
+++ b/app-builder/builder/components/products.mdx
@@ -18,7 +18,13 @@ icon: "box"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image222_69e6988ee2.png"
         alt="Nút thêm dữ liệu mới cho sản phẩm trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút thêm dữ liệu mới"
       />
     </Frame>
@@ -32,7 +38,13 @@ icon: "box"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image97_446d31dbb8.png"
         alt="Giao diện thêm thông tin và chọn ảnh sản phẩm"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Màn hình thêm dữ liệu sản phẩm"
       />
     </Frame>
@@ -56,7 +68,13 @@ icon: "box"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image39_16123be01c.png"
         alt="Nút chỉnh sửa sản phẩm trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút chỉnh sửa sản phẩm"
       />
     </Frame>
@@ -69,7 +87,13 @@ icon: "box"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image162_46e715931d.png"
         alt="Giao diện chỉnh sửa thông tin và hình ảnh sản phẩm"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Màn hình chỉnh sửa dữ liệu sản phẩm"
       />
     </Frame>
@@ -93,7 +117,13 @@ icon: "box"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image180_d0f90fa0d3.png"
         alt="Nút xóa sản phẩm trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút xóa sản phẩm"
       />
     </Frame>
@@ -115,7 +145,13 @@ icon: "box"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image50_07bdd4d90c.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -126,7 +162,13 @@ icon: "box"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image399_c91bdd8c58.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -138,7 +180,13 @@ icon: "box"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image27_11b5af05ce.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -149,7 +197,13 @@ icon: "box"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image400_9c47270566.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -159,7 +213,13 @@ icon: "box"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image401_9de4d55fb6.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -172,7 +232,13 @@ icon: "box"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image402_4f2e7ad932.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -183,7 +249,13 @@ icon: "box"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image403_421708eda5.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -194,7 +266,13 @@ icon: "box"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image404_17efdb943a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -206,7 +284,13 @@ icon: "box"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image405_df41bd4c2e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -217,7 +301,13 @@ icon: "box"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image406_c875147452.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -228,7 +318,13 @@ icon: "box"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image407_7556975207.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -239,7 +335,13 @@ icon: "box"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image408_90526fdfc8.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -253,7 +355,13 @@ icon: "box"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image409_1b601c1b0f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -264,7 +372,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image410_9d274f3787.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -276,7 +390,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image411_a458cdf131.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -287,7 +407,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image412_9eecdab0bb.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -301,7 +427,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image413_36af3cc460.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -312,7 +444,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image414_9061955df5.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -328,7 +466,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image416_02d2d611ee.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -339,7 +483,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image417_5bdda8729c.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -350,7 +500,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image418_b30412d3ce.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -362,7 +518,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image419_e4d7197065.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -373,7 +535,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image420_654c1c9417.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -383,7 +551,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image421_84364c4cbc.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -394,7 +568,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image422_4fd16895e3.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -405,7 +585,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image423_4c78f6c067.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -419,7 +605,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image424_7817bfcf0c.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -430,7 +622,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image425_6311c325ed.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -442,7 +640,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image426_3939a22152.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -453,7 +657,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image427_6b9ffe48dd.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -467,7 +677,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image428_7912e6647b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -478,7 +694,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image429_599cabfb2f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -498,7 +720,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image430_b0c4318f3e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -510,7 +738,13 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image430_b0c4318f3e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -532,7 +766,13 @@ Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image432_5207e48ac5.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
