--- a/app-builder/builder/components/headers.mdx
+++ b/app-builder/builder/components/headers.mdx
@@ -21,7 +21,13 @@ icon: "circle-user"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image157_657e5f3196.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -33,7 +39,13 @@ icon: "circle-user"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image231_4b9b45cb92.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
